# Bsc_ITP_MP

./: .gitignore  3DPlot.sh  CMakeLists.txt  README.md  benchmarking.sh  cleanData.py  combined3DPlots.sh  combinedPlots.sh  highT.nb  hwinfo.txt  main.cpp  main.h  make3DAnim.sh  makeMyPCBurn.sh  multi3DPlots.sh  oneScriptToRuleThemAll.sh  plot.py  plot3D.py  plotDeltaE.py  plotDispersion.py  plotSpecificHeatJConst.py  plotSpecificHeatTConst.py  plotSusceptibilityJConst.py  plotSusceptibilityTConst.py  runOnCluster.sh  runOnCluster_ExcitationEnergies.sh  runOnCluster_SpinGap.sh  runOnCluster_stats.sh  single3DPlot.sh  singlePlot.sh
1D_Heisenberg_and_testing/: 1DChain.cpp
bashScripts/: oneScriptToRuleThemAll.sh
headers/: benchmarking.cpp  benchmarking.h  defines.h  helpers.cpp  helpers.h  methods.cpp  methods.h
headers/methods/: 3DPlots.cpp  3DPlots.h  QTMethods.h  magnetizationBlocks.cpp  magnetizationBlocks.h  momentumStates.cpp  momentumStates.h  multithreading.cpp  multithreading.h  naiv.cpp  naiv.h  parityStates.cpp  parityStates.h  spinInversion.cpp  spinInversion.h
headers/methods/ED/: 3DPlots.cpp  3DPlots.h  EDHelpers.cpp  EDHelpers.h  magnetizationBlocks.cpp  magnetizationBlocks.h  methods.h  momentumStates.cpp  momentumStates.h  multithreading.cpp  multithreading.h  naiv.cpp  naiv.h  parityStates.cpp  parityStates.h  spinInversion.cpp  spinInversion.h
headers/methods/QT/: 3D.cpp  3D.h  QTHelpers.cpp  QTHelpers.h  hamilton.cpp  hamilton.h  mb.cpp  mb.h  ms.cpp  ms.h  multi.cpp  multi.h  si.cpp  si.h
plotting/: deleteData.py  makeAnim.py  plot.py  plot3D.py  plotBenchmarking.py  plotDeltaE.py  plotDeltaEQT.py  plotDispersion.py  plotSigmaStats.py  plotSpecificHeatJConst.py  plotSpecificHeatTConst.py  plotSpinGap.py  plotSpinGapExtrapolated.py  plotSpinGapExtrapolatedFit.py  plotSpinGapExtrapolatedManySamples.py  plotSpinGapQT.py  plotStatistics.py  plotStatisticsC.py  plotStatisticsX.py  plotSusceptibilityJConst.py  plotSusceptibilityTConst.py
results/: data.txt
results/8/data/step_size_data/: data_placeholder.txt
results/QT_stats/sigma/: data_placeholder.txt
results/extrapolation_temp/: data_placeholder.txt
test/: 1DChain.cpp  benchmark.cpp  benchmarkResults.txt  bitstuff.cpp
